--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="shortvut icon" href="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.pinterest.com%2Fpin%2F735142339170671193%2F&psig=AOvVaw2vsGb6YxJr_HZR6Q7uaq1L&ust=1624288825835000&source=images&cd=vfe&ved=0CAoQjRxqFwoTCOCcncPBpvECFQAAAAAdAAAAABAD"/>
+    <link rel="shortvut icon" href="https://i.pinimg.com/564x/b9/73/f0/b973f0d5e64378f93e690b49599a49ba.jpg"/>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Big+Shoulders+Stencil+Display:wght@900&display=swap" rel="stylesheet">
