--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="shortvut icon" href="https://i.pinimg.com/564x/b9/73/f0/b973f0d5e64378f93e690b49599a49ba.jpg"/>
+    <link rel="shortvut icon" href="https://www.pngkey.com/png/full/194-1947334_white-transparent-clock-logo-symbol-liverpool-fc-white.png"/>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Big+Shoulders+Stencil+Display:wght@900&display=swap" rel="stylesheet">
